# minGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Window.cpp  Window.h  collect_headers.py  include.h  main.cpp
GUI/: BaseWindow.h  BaseWindow.hpp  CMakeLists.txt  Message.h  Message.hpp  MessageHandler.h  MessageHandler.hpp  Window.cpp  Window.h  Window.hpp  messagehandler.hpp  mingl.h
GUI/MessageHandlers/: MessageHandler.h
GUI/Windows/: BaseWindow.h  Message.h  MessageHandler.h  Window.cpp  Window.h
Geometry/: Circle.cpp  Circle.h  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  Point.cpp  Point.h
Graphics/: CMakeLists.txt  Canvas.cpp  Canvas.h  Canvas.hpp  Pixel.cpp  Pixel.h  Pixel.hpp  RGBColor.cpp  RGBColor.h  pixel.cpp
Graphics/Colors/: CMakeLists.txt  HSBColor.cpp  HSBColor.h  HSLColor.cpp  HSLColor.h  HSLColor.hpp  RGBColor.cpp  RGBColor.h  RGBColor.hpp  colors.h  colors.hpp  hslcolor.cpp  rgbcolor.cpp
Graphics/Geometry/: CMakeLists.txt  Circle.cpp  Circle.h  Circle.hpp  Edge.cpp  Edge.h  Edge.hpp  Line.cpp  Line.h  Line.hpp  Point.cpp  Point.h  circle.cpp  circle.hpp  edge.cpp  geometry.h  geometry.hpp  line.cpp  point.cpp  point.hpp
Objects/: Circle.cpp  Circle.h  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  Point.cpp  Point.h
include/gdiplus/: gdiplus.h  gdiplusbase.h  gdiplusbrush.h  gdipluscolor.h  gdipluscolormatrix.h  gdipluseffects.h  gdiplusenums.h  gdiplusflat.h  gdiplusgpstubs.h  gdiplusgraphics.h  gdiplusheaders.h  gdiplusimageattributes.h  gdiplusimagecodec.h  gdiplusimaging.h  gdiplusimpl.h  gdiplusinit.h  gdipluslinecaps.h  gdiplusmatrix.h  gdiplusmem.h  gdiplusmetafile.h  gdiplusmetaheader.h  gdipluspath.h  gdipluspen.h  gdipluspixelformats.h  gdiplusstringformat.h  gdiplustypes.h
lib/: CMakeLists.txt  mingl
lib/graphics/: CMakeLists.txt
lib/graphics/colors/: CMakeLists.txt  rgbcolor.cpp
lib/graphics/geometry/: CMakeLists.txt  circle.hpp  edge.hpp  line.hpp
lib/mingl/: basewindow.hpp  button.cpp  button.hpp  guiobject.cpp  guiobject.hpp  label.hpp  message.hpp  messagehandler.hpp  mingl.h  window.cpp  window.hpp
lib/mingl/graphics/: canvas.hpp  pixel.cpp  pixel.hpp
lib/mingl/graphics/colors/: colors.hpp  hslcolor.cpp  hslcolor.hpp  rgbcolor.hpp
lib/mingl/graphics/geometry/: circle.hpp  edge.cpp  edge.hpp  geometry.hpp  line.cpp  line.hpp  point.cpp  point.hpp
lib/mingl/gui/: basewindow.hpp  button.cpp  button.hpp  edittext.cpp  edittext.hpp  guiobject.cpp  guiobject.hpp  label.cpp  label.hpp  window.cpp  window.hpp
lib/mingl/messaging/: messagehandler.hpp  windowmessage.hpp
lib/minglib/graphics/: canvas.cpp  canvas.hpp  pixel.cpp  pixel.hpp
lib/minglib/graphics/colors/: hslcolor.cpp  hslcolor.hpp  rgbcolor.cpp  rgbcolor.hpp
lib/minglib/graphics/geometry/: circle.hpp  edge.cpp  edge.hpp  geometry.hpp  line.cpp
lib/minglib/gui/: basewindow.hpp  button.cpp  button.hpp  edittext.cpp  edittext.hpp  guiobject.cpp  guiobject.hpp  label.cpp  label.hpp  numberinput.cpp  numberinput.hpp  textinput.cpp  textinput.hpp  window.cpp  window.hpp
lib/minglib/messaging/: messagehandler.hpp  windowmessage.hpp
lib/src/graphics/: canvas.cpp  pixel.hpp
lib/src/graphics/colors/: rgbcolor.cpp
lib/src/graphics/geometry/: point.hpp
lib/src/gui/: basewindow.hpp  button.cpp  guiobject.cpp  label.hpp  textinput.cpp  textinput.hpp  window.hpp
samples/: CMakeLists.txt  canvas.cpp  circles.cpp  cube.cpp  cube_computation.cpp  dividers.cpp  julia.cpp  random_circles.cpp
src/: CMakeLists.txt  main  mingl
src/graphics/: bitmap.cpp  bitmap.hpp  bitmap_file_header.h  bitmap_info_header.h  canvas.cpp  canvas.hpp
src/graphics/colors/: hslcolor.cpp  rgbcolor.cpp  rgbcolor.hpp
src/graphics/geometry/: circle.cpp  line.hpp  point.cpp
src/gui/: basewindow.hpp  button.cpp  button.hpp  font.hpp  guiobject.cpp  guiobject.hpp  numberinput.cpp  numberinput.hpp  window.cpp  window.hpp
src/messages/: messagehandler.cpp  messagehandler.hpp  windowmessage.cpp  windowmessage.hpp
test/: CMakeLists.txt  include.h  test_cli.cpp  test_gdi_plus.cpp  test_gdi_plus_mingl.cpp  test_mouse_interaction.cpp  test_simple_window.cpp  test_winapi_objects.cpp  test_windows_api.cpp  test_windows_api_app.cpp  test_windows_api_app_with_mingl.cpp
